# credit-card-fraud-detection

./: .env.example  .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  template.py
configs/: config.yaml  params.yaml  schema.yaml
src/credit_card_fraud_detection/components/data_ingestion/: factory.py  interface.py  orchestrator.py  strategies.py
src/credit_card_fraud_detection/config/: configuration.py
src/credit_card_fraud_detection/constants/: constants.py
src/credit_card_fraud_detection/core/: singleton.py
src/credit_card_fraud_detection/entity/: config_entity.py
src/credit_card_fraud_detection/pipeline/: stage_01_data_ingestion.py
src/credit_card_fraud_detection/utils/: common.py  logging_setup.py
